--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -68,7 +68,10 @@
    "source": [
     "#### Restart Python kernel ...\n",
     "\n",
-    "The Python kernel to be used with the Jupyter Notebook requires now a restart after package installation."
+    "The Python kernel to be used with the Jupyter Notebook requires now a restart after package installation.\n",
+    "\n",
+    "Once the libraries have been successfully installed, the kernel must be restarted. Do this by clicking on the Restart option in the menu bar at the top.\n",
+    "   <br>![](./images/BAS_python_env_restart.png)"
    ]
   },
   {
@@ -78,21 +81,6 @@
     "\n",
     "\n",
     "> **Note** This may take a minute."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Connect to the HANA Cloud\n",
-    "\n",
-    "The provided Python script imports database connection modules and initiates a connection to a SAP HANA Cloud instance using ...\n",
-    "-  the connection details are edited within a user.ini file and reused for creating the connection from python in each exercise\n",
-    "-  Alternatively, the user is prompted to enter hostname, their username and password, which are then used to establish a secure connection to the SAP HANA Cloud database. \n",
-    "\n",
-    "</br>\n",
-    "\n",
-    "> **Note** Use your username and password supplied to logon to the SAP HANA Cloud database. Find the **host_address** in the lesson content."
    ]
   },
   {
@@ -120,27 +108,32 @@
     "1. The content of the [./ex0/temp_user.ini](ex0/temp_user.ini) file is copied to a file [./ex0/user.ini](ex0/user.ini) and \n",
     "2. the user and the password given to you by the instructor are updated in `user.ini` file \n",
     "\n",
-    "👆🏻\n",
     "\n",
     "👇🏼  \n",
     "![Set user](./images/BAS_python_edit_userini.png)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "The file './user.ini' does not exist! Create and configure it first.",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m The file './user.ini' does not exist! Create and configure it first.\n"
-     ]
-    }
-   ],
+   "source": [
+    "### Connect to the HANA Cloud\n",
+    "\n",
+    "Now executed the provided Python code cells below, by\n",
+    "- __click__ on the __PLAY-icon__ left to the cell\n",
+    "- or with the cell selected press __Ctrl+Alt+Enter__\n",
+    "- it is also possible to click into the code cell and press __Shift+Enter__\n",
+    "\n",
+    "![Execute Python cell](./images/BAS_python_execute_cell.png)\n",
+    "\n",
+    "</br>\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "\n",
@@ -249,7 +242,6 @@
     "\n",
     "# Utilize connection keys from the hdbclient connection store\n",
     "#cc = dataframe.ConnectionContext(userkey='<MYHCTRIALkeyexample>', sslValidateCertificate=False)\n",
-    "#cc = ConnectionContext(userkey='HC24Q1_VECENG')\n",
     "\n",
     "# Control connection\n",
     "print(cc.connection.isconnected())\n",
