--- a/exercises/ex0/ex0_2-check_setup.ipynb
+++ b/exercises/ex0/ex0_2-check_setup.ipynb
@@ -66,7 +66,7 @@
    "source": [
     "import os, sys\n",
     "\n",
-    "file_path = './ex0/user.ini'  # Replace this with the path to your file\n",
+    "file_path = '../ex0/user.ini'  # Replace this with the path to your file\n",
     "\n",
     "if os.path.exists(file_path):\n",
     "    print(f\"The file '{file_path}' exists.\")\n",
@@ -147,7 +147,7 @@
    "id": "9bfd54f6",
    "metadata": {},
    "source": [
-    "🤓 **Let's discuss**:"
+    "🤓 **Let's discuss**: dit it all work out?"
    ]
   }
  ],
