--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -59,6 +59,9 @@
     "!pip install folium --break-system-packages\n",
     "!pip install ipywidgets --break-system-packages\n",
     "\n",
+    "!pip install plotly --break-system-packages\n",
+    "!pip install nbformat --break-system-packages\n",
+    "\n",
     "# kernel restart required!!!\n"
    ]
   },
