--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -181,17 +181,34 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Alternative 1 - Check connection using prompted connection credentials\n",
+    "<br>\n",
+    "\n",
+    "In the following, alternative connection credential configuration methods are illustrated as reference information.  \n",
+    "__Those shall not be executed__"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using user input prompts for the connection credentials"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "# Alternative  - Create and validate the HANA Cloud connection using user input prompts for the connection credentials\n",
+    "# Notebook cell is set to type raw\n",
     "\n",
     "from hdbcli import dbapi\n",
-    "#from langchain_community.vectorstores.hanavector import HanaDB\n",
-    "\n",
-    "# 13b7c15d-848f-40b5-9259-c9c36ab85f56.hna1.prod-eu10.hanacloud.ondemand.com\n",
     "\n",
     "host_address = input(\"Enter HANA Cloud Hostname\")\n",
     "hdb_user = input(\"Enter Username\")\n",
@@ -211,47 +228,6 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "# Alternative 2a - Using local hdbuser store\n",
-    "# Get the hdbuserstore environment mapped to your workspace envrionment\n",
-    "import os\n",
-    "os.environ[\"HDB_USE_IDENT\"]=os.getenv(\"WORKSPACE_ID\")\n",
-    "print(os.getenv(\"HDB_USE_IDENT\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Alternative 2b - The HANA Dataframe ConnectionContext class offers various ways of connecting to HANA Cloud, here we re-use promted credentials from the step before\n",
-    "# Create the SAP HANA CLoud connection\n",
-    "import hana_ml.dataframe as dataframe\n",
-    "from hana_ml.dataframe import ConnectionContext\n",
-    "#cc = dataframe.ConnectionContext( address=\"<hana-cloud-hostname>\", port=443,  user=\"<HANA-user>\")\n",
-    "#cc = dataframe.ConnectionContext( userkey=<your-key-name>, sslValidateCertificate=False)\n",
-    "\n",
-    "# Utilize connection credentials from external file\n",
-    "from hana_ml.algorithms.pal.utility import Settings\n",
-    "#url, port, user, pwd = Settings.load_config('./0-setup/HC_trial_PAL.ini')\n",
-    "cc = ConnectionContext(host_address, 443, hdb_user, hdb_password)\n",
-    "\n",
-    "# Utilize connection keys from the hdbclient connection store\n",
-    "#cc = dataframe.ConnectionContext(userkey='<MYHCTRIALkeyexample>', sslValidateCertificate=False)\n",
-    "\n",
-    "# Control connection\n",
-    "print(cc.connection.isconnected())\n",
-    "print(cc.hana_version())"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -259,13 +235,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
