--- a/exercises/ex0/ex0_2-check_setup.ipynb
+++ b/exercises/ex0/ex0_2-check_setup.ipynb
@@ -6,7 +6,16 @@
    "id": "4bcc6ef9",
    "metadata": {},
    "source": [
-    "## Check SAP HANA Client for Python is installed"
+    "## Connect to SAP HANA Cloud and check successful connection"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "57d22639",
+   "metadata": {},
+   "source": [
+    "Check Python Machine Learning client for SAP HANA version (aka hana-ml) installed and print."
    ]
   },
   {
@@ -16,16 +25,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"SAP HANA Client for Python: {__import__(\"hana_ml\").__version__}\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "57d22639",
-   "metadata": {},
-   "source": [
-    "The latest version and its documentation can be checked at https://pypi.org/project/hana-ml/#history"
+    "## Loading the Python Machine Learning client library for SAP HANA and get the version\n",
+    "import hana_ml\n",
+    "print(f'Python Machine Learning client for SAP HANA: {__import__(\"hana_ml\").__version__}')"
    ]
   },
   {
@@ -34,17 +36,12 @@
    "id": "bd79a425",
    "metadata": {},
    "source": [
-    "## Load the user connection data and connect to the SAP HANA database instance\n",
+    "Load the user connection data from a file for automatically establishing the connection using the prepared credentials\n",
     "\n",
-    "👉🏻 **Before running the next cell** make sure:\n",
+    "👉🏻 The content of the [./user.ini](./images/BAS_python_edit_userini.png)-file will be processed in the next step.\n",
     "\n",
-    "1. The content of the [./00-setup/temp_user.ini](00-setup/temp_user.ini) file is copied to a file [./00-setup/user.ini](00-setup/user.ini) and \n",
-    "2. the user and the password given to you by the instructor are updated in `user.ini` file \n",
     "\n",
-    "👆🏻\n",
-    "\n",
-    "👇🏼\n",
-    "![Set user](./img/check_userini02.png)"
+    "![Set user](./images/BAS_python_edit_userini.png)"
    ]
   },
   {
@@ -52,21 +49,11 @@
    "execution_count": null,
    "id": "d94aaec7",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SystemExit",
-     "evalue": "The file './00-setup/user.ini' does not exist! Create and configure it first.",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m The file './00-setup/user.ini' does not exist! Create and configure it first.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "\n",
-    "file_path = '../ex0/user.ini'  # Replace this with the path to your file\n",
+    "file_path = '../ex0/user.ini'  \n",
     "\n",
     "if os.path.exists(file_path):\n",
     "    print(f\"The file '{file_path}' exists.\")\n",
@@ -75,32 +62,10 @@
     "    if myhost == '' or myport == 0 or myuser == '' or mypwd == '':\n",
     "        print(\"At least one required connection parameter is empty.\")\n",
     "    else:\n",
-    "        print(f\"Connection to SAP HANA db at {myhost}:{myport} \\nwill be attempted for the user {myuser}\")\n",
+    "        print(f\"Connection to SAP HANA database will be attempted for the user {myuser} at SQL endpoint {myhost}:{myport} \")\n",
     "else:\n",
     "    sys.exit(f\"The file '{file_path}' does not exist! Create and configure it first.\")\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e72c60b4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Loading the Python Machine Learning client library for SAP HANA and get the version\n",
-    "import hana_ml\n",
-    "#print(hana_ml.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b98e5ac9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"SAP HANA Client for Python: {__import__(\"hana_ml\").__version__}\")"
+    "    "
    ]
   },
   {
@@ -118,8 +83,8 @@
     "    password=mypwd\n",
     ")\n",
     "# Control connection\n",
-    "print('Connect to SAP HANA Cloud successful: ', myconn.connection.isconnected(), ' , with version: ', myconn.hana_version())\n",
-    "print(f\"Connected to SAP HANA db version {myconn.hana_version()} \\nat {myhost}:{myport} as user {myuser}\")"
+    "print('Connection to SAP HANA Cloud successful is: ', myconn.connection.isconnected(), ' , with database version: ', myconn.hana_version())\n",
+    "print(f\"Connected to SAP HANA Cloud database at {myhost}:{myport} as user {myuser}\")"
    ]
   },
   {
@@ -128,7 +93,7 @@
    "id": "0235f6c2",
    "metadata": {},
    "source": [
-    "## Execute an SQL query on SAP HANA database and get the result displayed"
+    "Execute an SQL query on SAP HANA database and get the result displayed"
    ]
   },
   {
@@ -138,16 +103,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Current time on the SAP HANA Cloud server: {myconn.sql(\"SELECT NOW() FROM DUMMY\").collect().CURRENT_TIMESTAMP[0]}')"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "9bfd54f6",
-   "metadata": {},
-   "source": [
-    "🤓 **Let's discuss**: dit it all work out?"
+    "print(f'Current time on the SAP HANA Cloud database service: {myconn.sql(\"SELECT NOW() FROM DUMMY\").collect().CURRENT_TIMESTAMP[0]}')"
    ]
   }
  ],
