ex1 + ex2 updates after review1

--- a/exercises/ex1/ex1_notebook.ipynb
+++ b/exercises/ex1/ex1_notebook.ipynb
@@ -547,7 +547,9 @@
    "outputs": [],
    "source": [
     "# For the purpose of this demo, we're a using a simple add_id()-method. Within your real data, likely one would create a key-column over a set of composite logical key columns.\n",
-    "hdf_acdoca_slice_id=hdf_acdoca_slice.add_id()"
+    "hdf_acdoca_slice_id=hdf_acdoca_slice.add_id()\n",
+    "\n",
+    "hdf_acdoca_slice_id.head(10).collect()"
    ]
   },
   {
@@ -619,7 +621,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Sort outlier results descending by SCORE-value\n",
     "display(outlier_results.sort('SCORE', desc=True).head(5).collect())\n",
+    "\n",
+    "# Count number of predicted outliers (LABEL = -1) and non-outliers (LABEL = 1)\n",
     "display(outlier_results.agg([('count','ID','n_transactions')] ,group_by = ['LABEL']).collect())"
    ]
   },
@@ -885,7 +890,7 @@
    "source": [
     "# Review our data and features\n",
     "print(outlier_features, '\\n')\n",
-    "display(hdf_acdoca_slice.head(2).collect(), '\\n')\n",
+    "display(hdf_acdoca_slice.head(2).collect())\n",
     "display(hdf_acdoca_slice_id.head(2).collect())"
    ]
   },
@@ -896,7 +901,7 @@
    "source": [
     "<br>\n",
     "\n",
-    "Let's search for outliers in out data slice, per \"G/L Account\" in parallel"
+    "Let's search for outliers in our data slice, for each \"G/L Account\" in parallel"
    ]
   },
   {
@@ -908,6 +913,16 @@
    "source": [
     "# How many to we have in our data?\n",
     "hdf_acdoca_slice.distinct(\"G/L Account\").agg([('count','G/L Account','Count of G/L Accounts')]).collect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ee9b091",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "The IsolationForest object parameter __massive=True__ and the fit-/predict-method parameter __group_key=\"G/L Account\"__ trigger the massive data-parallel processing"
    ]
   },
   {
@@ -942,6 +957,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# The results show outlier predictions across the data groups of \"G/L Accounts\"\n",
     "display(res.sort('SCORE', desc=True).head(10).collect())"
    ]
   },
@@ -1040,7 +1056,7 @@
     "print(isof.get_fit_output_table_names())\n",
     "print(isof.get_fit_parameters())\n",
     "\n",
-    "print(isof.consume_fit_hdbprocedure('<PROC_NAME>', in_tables=[\"<ANALYSIS_DATA>\"], out_tables=[\"<IF_MODEL_TABLE>\"])['consume'], \"\\n\")dd"
+    "print(isof.consume_fit_hdbprocedure('<PROC_NAME>', in_tables=[\"<ANALYSIS_DATA>\"], out_tables=[\"<IF_MODEL_TABLE>\"])['consume'], \"\\n\")"
    ]
   },
   {
@@ -1098,7 +1114,7 @@
    "outputs": [],
    "source": [
     "outlier_results = isof.predict(data=hdf_acdoca_slice_id, key='ID', features=outlier_features, \n",
-    "                        contamination=0.05)"
+    "                               contamination=0.05)"
    ]
   },
   {
@@ -1169,8 +1185,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pwd\n",
-    "!cd"
+    "# shows current path: /home/user/projects/teched2025-DA261/exercises/ex1\n",
+    "!pwd\n",
+    "\n",
+    "# in case of windows systems\n",
+    "#!cd"
    ]
   },
   {
@@ -1180,8 +1199,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!ls hana_hdi/DiabClassHDI/hana/DiabClassHDI/src/procedures/\n",
-    "!dir hana_hdi\\\\DiabClassHDI\\\\hana\\\\DiabClassHDI\\\\src\\\\procedures\\\\"
+    "# List artifacts in target directory\n",
+    "!ls ./generated_src4CAP/OutlierAnalysis_HANA-CAP/db/src/\n",
+    "\n",
+    "# in case of windows systems\n",
+    "#!dir .\\\\generated_src4CAP\\\\OutlierAnalysis_HANA-CAP\\\\db\\\\src\\\\"
    ]
   },
   {
@@ -1191,8 +1213,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!cat hana_hdi/DiabClassHDI/hana/DiabClassHDI/src/procedures/base_unifiedclassification1_fit.hdbprocedure\n",
-    "!type hana_hdi\\\\DiabClassHDI\\\\hana\\\\DiabClassHDI\\\\src\\\\procedures\\\\base_unifiedclassification1_fit.hdbprocedure"
+    "!cat ./generated_src4CAP/OutlierAnalysis_HANA-CAP/db/src/hana-ml-base-pal-isolation-forest.hdbprocedure\n",
+    "#!type .\\\\generated_src4CAP\\\\OutlierAnalysis_HANA-CAP\\\\db\\\\src\\\\hana-ml-base-pal-isolation-forest.hdbprocedure"
    ]
   },
   {
@@ -1202,8 +1224,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!cat hana_hdi/DiabClassHDI/hana/DiabClassHDI/src/procedures/cons_base_unifiedclassification1_fit.hdbprocedure\n",
-    "!type hana_hdi\\\\DiabClassHDI\\\\hana\\\\DiabClassHDI\\\\src\\\\procedures\\\\cons_base_unifiedclassification1_fit.hdbprocedure"
+    "!cat ./generated_src4CAP/OutlierAnalysis_HANA-CAP/db/src/hana-ml-cons-pal-isolation-forest.hdbprocedure\n",
+    "#!type .\\\\generated_src4CAP\\\\OutlierAnalysis_HANA-CAP\\\\db\\\\src\\\\hana-ml-cons-pal-isolation-forest.hdbprocedure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cc48bb8",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "Generating non-CAP, HANA HDI only artifacts for a native SAP HANA application"
    ]
   },
   {
@@ -1402,24 +1434,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a222a983",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isof.disable_workload_class(\"PAL_AUTOML_WORKLOAD\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "de91aefe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "be9b2301",
    "metadata": {},
@@ -1434,6 +1448,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Filtering the data for illustration on two G/L Accounts\n",
+    "filterSQL=f'\"G/L Account\" in (720000, 630000)'\n",
     "hdf_acdoca_slice_id.filter(filterSQL).head(10).collect()"
    ]
   },
@@ -1459,10 +1475,11 @@
     "parallel_isof = IsolationForest(massive=True, random_state=2,  n_estimators=101, max_samples=100000,\n",
     "                                group_params={'720000': {'n_estimators':50, 'max_samples' : 10000}, \n",
     "                                              '630000': {'n_estimators':50, 'max_samples' : 10000}})\n",
+    "\n",
     "filterSQL=f'\"G/L Account\" in (720000, 630000)'\n",
     "parallel_isof.fit(data=hdf_acdoca_slice.filter(filterSQL), group_key=\"G/L Account\", features=outlier_features)\n",
     "\n",
-    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id, key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
+    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id.filter(filterSQL), key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
     "                                 group_params={'720000': {'contamination': 0.10}, \n",
     "                                              '630000': {'contamination':  0.025}})\n"
    ]
@@ -1505,7 +1522,7 @@
    "outputs": [],
    "source": [
     "# Massive with reason code\n",
-    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id, key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
+    "res, err = parallel_isof.predict(data=hdf_acdoca_slice_id.filter(filterSQL), key=\"ID\", group_key=\"G/L Account\", features=outlier_features,  contamination=0.05,   \n",
     "                       group_params=mygroup_params\n",
     "                       ,show_explainer=True, explain_scope='outliers', top_k_attributions=5\n",
     "                      )\n",
