--- a/exercises/ex2/ex2_notebook.ipynb
+++ b/exercises/ex2/ex2_notebook.ipynb
@@ -551,7 +551,7 @@
     "<br>\n",
     "\n",
     "Now, further __prepare__ the hana dataframe for the __sentiment analysis__  \n",
-    "- Restricted the columns of interest using the select()-method  \n",
+    "- Restrict the columns of interest using the select()-method  \n",
     "- Adding a __new column_ within the select()-method: ('<valid SQL value expression>', '<Column Name>'), in our case we seek to add a LANGUAGE column for the analysis"
    ]
   },
@@ -623,7 +623,8 @@
    "id": "eb78891a-26c5-4212-bc95-a05d634e9977",
    "metadata": {},
    "source": [
-    "Complaint 2035214 shows the biggest document sentiment magnitude, let's explore it's sentence-level sentiment"
+    "Identify the ComplaintID, for the complaint showing the biggest document sentiment magnitude and explore it's sentence-level sentiment\n",
+    "- Set the Identified ComplaintID into the filterSQL-variable as an additional in-value"
    ]
   },
   {
@@ -634,7 +635,10 @@
    "outputs": [],
    "source": [
     "# Let's further investage sentence-level sentiment for complaints\n",
-    "display(sentence_sentiment.filter('\"ComplaintID\" = \\'2035214\\'').select('SENTENCE_ID', 'CONTENT', 'SENTIMENT_LABEL', 'SENTIMENT_SCORE', 'SENTIMENT_MAGNITUDE').collect())"
+    "\n",
+    "filterSQL=f'\"ComplaintID\" in (9999999, <ComplaintID-value>)'  \n",
+    "\n",
+    "display(sentence_sentiment.filter(filterSQL).select('SENTENCE_ID', 'CONTENT', 'SENTIMENT_LABEL', 'SENTIMENT_SCORE', 'SENTIMENT_MAGNITUDE').collect())"
    ]
   },
   {
@@ -673,7 +677,8 @@
    "outputs": [],
    "source": [
     "# Let's review the original dataframe with complaint text and the generated text embedding column\n",
-    "display(consumercomplaints_hdf.select('ComplaintID','ConsumerComplaintNarrative', 'ComplaintNarrative_EMBEDDING').head(1).collect())"
+    "filterSQL=f'\"ComplaintID\" in (9999999, 5033663)'  \n",
+    "display(consumercomplaints_hdf.select('ComplaintID','ConsumerComplaintNarrative', 'ComplaintNarrative_EMBEDDING').filter(filterSQL).head(1).collect())"
    ]
   },
   {
@@ -694,13 +699,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a dataframe for the ComplaintID 11827066 and use the VECTOR_EMBEDDING-SQL function applying the latest text embedding model in SAP HANA Cloud (SAP_GXY.20250407)\n",
+    "# Create a dataframe for the ComplaintID 5033663 and use the VECTOR_EMBEDDING-SQL function applying the latest text embedding model in SAP HANA Cloud (SAP_GXY.20250407)\n",
     "hdf_tmp_textembedding = myconn.sql(\n",
     "\"\"\"\n",
     "SELECT \"ComplaintID\", \"ConsumerComplaintNarrative\",\n",
     "\t\tVECTOR_EMBEDDING(\"ConsumerComplaintNarrative\", 'DOCUMENT','SAP_GXY.20250407') AS \"NEW_TEXTEMBEDDING_VECTOR\"\n",
     "\tFROM \"DA261_SHARE\".\"CONSUMER_FINANCIAL_COMPLAINTS\" \n",
-    "    WHERE \"ComplaintID\"=11827066\n",
+    "    WHERE \"ComplaintID\"=5033663\n",
     "\t;\n",
     "\"\"\"\n",
     ")\n",
@@ -1363,7 +1368,7 @@
    "id": "b00e1b8f-d55a-4965-ac12-fd81cd304e91",
    "metadata": {},
    "source": [
-    "# Appendix"
+    "# Appendix - reference sections"
    ]
   },
   {
@@ -1371,7 +1376,7 @@
    "id": "29fb2efb-5b6d-45a8-927f-265dc3af207f",
    "metadata": {},
    "source": [
-    "## Loading the data sample"
+    "## Loading the data sample (optional)"
    ]
   },
   {
