--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -133,6 +133,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "This first python script cell, reads the ./user.ini-file and extracts the connection details into variables."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -156,6 +164,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "The variables with the connection details are now used to establish the SAP HANA Cloud database connection from Python.\n",
+    "- From the hana_ml dataframe class, the ConnectionContext subclass is used to create a connection with the Python client (hdbcli) for SAP HANA underneath."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -169,6 +187,15 @@
     "    password=mypwd\n",
     ")\n",
     "print(f\"Connected to SAP HANA db version {myconn.hana_version()} \\nat {myhost}:{myport} as user {myuser}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "The ConnectionContext object allows us to do various things, with the HANA dataframe sql()-method we quickly seek to issue a quick sql-query to the database to validate the connection."
    ]
   },
   {
