ex1 + ex2 overviews added

--- a/exercises/ex1/ex1_notebook.ipynb
+++ b/exercises/ex1/ex1_notebook.ipynb
@@ -25,19 +25,36 @@
    "metadata": {},
    "source": [
     "In this exercise, you will explore how to __apply machine learning techniques__ like __Isolation Forest__ for __outlier analysis__ on __financial business transaction data__.\n",
-    "- Financial business transaction data of most SAP applications is managed in the central tables like [Universal Journal](https://help.sap.com/docs/SAP_S4HANA_ON-PREMISE/651d8af3ea974ad1a4d74449122c620e/523b8a55559ad007e10000000a44538d.html?locale=en-US&version=LATEST), ACDOCA and accessible through a large variety of CDS views like for example [I_GLAccountLineItemRawData](https://help.sap.com/docs/SAP_S4HANA_CLOUD/c0c54048d35849128be8e872df5bea6d/7fe239a3f2214e2cb36e90d453eee6d3.html) for different purposes. The Universal Journal, ACDOCA table, is one of the tables in S/4HANA systems with the largest number of links to business transactions, and thus also is typically a very large table within the system.\n",
+    "- __Financial business transaction data__ of most SAP applications is managed in the central tables like [Universal Journal](https://help.sap.com/docs/SAP_S4HANA_ON-PREMISE/651d8af3ea974ad1a4d74449122c620e/523b8a55559ad007e10000000a44538d.html?locale=en-US&version=LATEST), ACDOCA and accessible through a large variety of CDS views like for example [I_GLAccountLineItemRawData](https://help.sap.com/docs/SAP_S4HANA_CLOUD/c0c54048d35849128be8e872df5bea6d/7fe239a3f2214e2cb36e90d453eee6d3.html) for different purposes. The Universal Journal, ACDOCA table, is one of the tables in S/4HANA systems with the largest number of links to business transactions, and thus also is typically a very large table within the system.\n",
     "    - As reference information and background reading, see the following blog posts [Analytics on Universal Journal, the heart of SAP S/4HANA](https://community.sap.com/t5/enterprise-resource-planning-blog-posts-by-sap/analytics-on-universal-journal-the-heart-of-sap-s-4hana/ba-p/13489661) and [Understanding the Universal Journal in SAP S/4HANA](https://community.sap.com/t5/enterprise-resource-planning-blog-posts-by-sap/understanding-the-universal-journal-in-sap-s-4hana/ba-p/13345726).  \n",
     "- Given the variety in nature of business transaction managed in the Universal Journal, __outlier analysis__ as a form of __analytics on the universal journal__ involves a as well a great variety of techniques in order to detect errors or fraudulent transactions. \n",
     "    - Examples would be detecting outlier by applying certain rules in searching through the data for false or incomplete booking, e.g. missing transaction types, missing functional areas, wrong accounts for business scenario, balance not zero in certain account, and so on and on.\n",
-    "    - In this exercise, we introduce a __trending machine learning__ technique for __outlier analyis__ called __isolation forest__ which can also be applied to financial business transaction data, and can be applied within the SAP HANA database. The technique uses a ensemble set of multiple decision trees and identifies outliers based on the assumption that the decision tree depths is shorter for outliers than the average decision tree depths of normal values. Thus __adding to the mix of outlier detection methods__, it can be __helpful__ to __identify outliers in the business transaction data by their unusual pattern of data values__.\n",
-    "    Furthermore, the technique is also well known as capable analyzing larger amounts of data.\n",
-    "- Outlier analysis on financial business transaction data typically focuses on specific, smaller subsets or slices of the data, e.g. business area with specific and typical financial transaction data pattern. Therefore outlier analysis will never be applied to the complete table at once.\n",
-    "    - Use of filtering for subsets and specific CDS views is common practive\n",
-    "    - Potential extraction of data for further analysis to a side by side SAP HANA Cloud system is possible via the Smart Data Access (SDA) ABAP adapter used to consume remote ABAP CDS Views, see this blog post for details [Taking Data Federation to the Next Level: Accessing Remote ABAP CDS View Entities in SAP HANA Cloud](https://community.sap.com/t5/technology-blog-posts-by-sap/taking-data-federation-to-the-next-level-accessing-remote-abap-cds-view/ba-p/13635034).\n",
-    "    - In this exercise, we use an artificially generated small table called ACDOCA. For details on how the data is generated, see the code in the appendix of the notebook.\n",
-    "    \n",
+    "\n",
     "<br>\n",
-    "Not let's get started with the exercise!"
+    "\n",
+    "In this exercise, we introduce a __trending machine learning__ technique for __outlier analyis__ called __isolation forest__, \n",
+    "- the technique uses a ensemble set of multiple decision trees and identifies outliers based on the assumption that the __decision tree depths for outliers is shorter__ than the average decision tree depths of normal values;\n",
+    "- the technique can also be applied to financial business transaction data, and can be applied within the SAP HANA database,\n",
+    "- thus __adding to the mix of outlier detection methods__, it can be __helpful__ to __identify outliers in the business transaction data by their unusual pattern of data values__. \n",
+    "- Furthermore, the technique is also well known as __capable of analyzing larger amounts of data__.\n",
+    "\n",
+    "Data used for the analysis\n",
+    "- Outlier analysis on financial business transaction data typically __focuses on specific, smaller subsets or slices of the data__, e.g. business area with specific and typical financial transaction data pattern. Therefore outlier analysis will never be applied to the complete table at once.\n",
+    "- Hence, use of filtering for subsets and slices and specific CDS views is common practice\n",
+    "- Potential extraction of data for further analysis to a side by side SAP HANA Cloud system is possible via the Smart Data Access (SDA) ABAP adapter used to consume remote ABAP CDS Views, see this blog post for details [Taking Data Federation to the Next Level: Accessing Remote ABAP CDS View Entities in SAP HANA Cloud](https://community.sap.com/t5/technology-blog-posts-by-sap/taking-data-federation-to-the-next-level-accessing-remote-abap-cds-view/ba-p/13635034).\n",
+    "- In this exercise now, we use an artificially generated small table called ACDOCA. For details on how the data is generated, see the code in the appendix of the notebook.\n",
+    "\n",
+    "<br><br>\n",
+    "\n",
+    "Overview on the exercise tasks\n",
+    "\n",
+    "![](./images/ex1_scenario.png)\n",
+    "\n",
+    "\n",
+    "<br>\n",
+    "Not let's get started with the exercise!\n",
+    "\n",
+    "<br><br>"
    ]
   },
   {
@@ -56,7 +73,7 @@
    "id": "4b631401-730a-43c1-bfd9-a2223d771b7c",
    "metadata": {},
    "source": [
-    "### Step 0: Establish and check connection [2:5s]\n"
+    "### Step 0: Establish and check connection\n"
    ]
   },
   {
@@ -430,7 +447,7 @@
     "- It tries to detect or isolate outliers based on the assumption that the __decision tree depths__ for __outlier values__ is __shorter__ than the average decision tree depths for normal values.  \n",
     "- It is regarded as a technique also suitable to be applied to large datasets.  \n",
     "- For additional background reading on algorithm, see also [wikipedia: isolation forest](https://en.wikipedia.org/wiki/Isolation_forest) and [wikipedia: different outlier detection techniques](https://en.wikipedia.org/wiki/Anomaly_detection) for additional background reading.\n",
-    "\n",
+    "![](./images/ex1_IF_algorithm.png)\n",
     "\n",
     "Amongst other capabilities, the __SAP HANA Cloud Isolation Forest-functions__ supports for\n",
     "- analysis of outliers within a __mixed feature set__ of numeric as well as __categorial__ columns,\n",
