--- a/exercises/ex2/ex2_notebook.ipynb
+++ b/exercises/ex2/ex2_notebook.ipynb
@@ -16,7 +16,7 @@
    "id": "389a2d7b-1ede-4efa-957b-fc05c0a4bbe1",
    "metadata": {},
    "source": [
-    "### Understanding the exercise scenario [0:30s]"
+    "### Understanding the exercise scenario "
    ]
   },
   {
@@ -24,19 +24,29 @@
    "id": "e55273c5-7199-410e-9de0-c1b6b53dfe43",
    "metadata": {},
    "source": [
-    "In this exercise, you will explore how to __classify and process consumer complaints texts__ using \n",
-    "- __text analysis for sentiment detection__, \n",
-    "- __similarity search__ with __text embeddings__ and \n",
-    "- __AutoML__ techniques to build a __consumer complaints classification machine learning model__,  \n",
-    "- thus __unlocking__ the __semantic understanding of text data__ as text embedding feature with machine learning models. \n",
+    "In this exercise, you will explore how to __analyze consumer complaints data using text embeddings and machine learning models__ using \n",
+    "- 1) explore the __financial consumer complaints__ data and __text narratives__ using __SAP HANA dataframes__, preparing and selecting the data to be analyzed in detail\n",
+    "- 4) __AutoML__  techniques to build a __consumer complaints classification machine learning model predicting cases for Monetary-Relief__, __unlocking__ the __semantic understanding of text data__ as text embedding feature with machine learning models\n",
     "\n",
-    "<br>\n",
+    "Optionally and if time permits, you may explore\n",
+    "- 2) how to apply __text analysis models__ to the original consumer complaints text narratives in order to detect and classify the __consumer's sentiment__ \n",
+    "- 3) how to apply __vector engine similarity search-queries__ within the __consumer complaints text embeddings__ data  \n",
     "\n",
-    "The __classification of incoming service requests__ is a __common machine learning use case__. This exercise illustrates, how such a use case can be implemented using __out-of-the-box capabilities from the SAP HANA Cloud database__, inluding a text embedding model to generate embedding vector, a vector engine to store the generated text embeddings, similarity search functions with vector columns and machine learning algorithms from Predictive Analysis Library (PAL) in the database AI engine.\n",
+    "\n",
+    "![](./images/ex2_scenario.png)\n",
+    "<br><br>\n",
+    "\n",
+    "The __classification of incoming service requests__ is a __common machine learning use case__. \n",
+    "- This exercise illustrates, how such a use case can be implemented using __out-of-the-box capabilities from the SAP HANA Cloud database__, \n",
+    "- inluding an __in-database text embedding model__ to generate embedding vector, \n",
+    "- a __vector engine__ to store the generated text embeddings, similarity search functions with vector columns \n",
+    "- and __machine learning algorithms and AutoML functions capable of processing vector data__ from Predictive Analysis Library (PAL) in the database AI engine.\n",
     "\n",
     "The data used in this scenario, derives from the __consumer complaint database__, from the US government Consumer Financial Protection Bureau.  \n",
     "Details regarding data license, download and import instruction are given [Appendix section](##loading-the-data-sample).\n",
     "<br>\n",
+    "\n",
+    "\n",
     "\n",
     "Now let's get started with the exercise!\n",
     "<br><br>"
@@ -76,7 +86,7 @@
    "id": "ab0822b3-6c94-499b-a9ac-85033f8030c1",
    "metadata": {},
    "source": [
-    "### Step 0: Establish and check connection [2:5s]"
+    "### Step 0: Establish and check connection "
    ]
   },
   {
@@ -117,7 +127,7 @@
     "<br>\n",
     "\n",
     "## Ex. 2.1 - Exploring Consumer Complaints Data\n",
-    "### Step 1: Create the HANA dataframe for the consumer complaints data [5:60s]"
+    "### Step 1: Create the HANA dataframe for the consumer complaints data "
    ]
   },
   {
@@ -282,7 +292,7 @@
    "source": [
     "<br><br>\n",
     "\n",
-    "### Step 2: Explore consumer complaints data [5:120s]"
+    "### Step 2: Explore consumer complaints data "
    ]
   },
   {
@@ -462,7 +472,7 @@
    "id": "3902874d-fb47-47d6-b314-11c9dc8808ce",
    "metadata": {},
    "source": [
-    "### Step 3: Exploring the sentiment of consumer complaints [6:120s]"
+    "### Step 3: Exploring the sentiment of consumer complaints "
    ]
   },
   {
@@ -656,7 +666,7 @@
    "id": "d0068a66-53bc-4256-afda-429d6f3c1e91",
    "metadata": {},
    "source": [
-    "### Step 4: Explore consumer complaints narratives using Text Embeddings and similarity search [6:180s]"
+    "### Step 4: Explore consumer complaints narratives using Text Embeddings and similarity search"
    ]
   },
   {
@@ -857,7 +867,7 @@
    "id": "a595f6dd-c7f8-482d-951d-3a79847fc583",
    "metadata": {},
    "source": [
-    "### Step 5: Data selection and preparation [5:90s]"
+    "### Step 5: Data selection and preparation"
    ]
   },
   {
@@ -1004,7 +1014,7 @@
    "id": "a506f0b4-c3d3-4273-ad8c-99fee9871d69",
    "metadata": {},
    "source": [
-    "### Step 6: Consumer complaints Text Embedding vector dimension reduction [3:60s]"
+    "### Step 6: Consumer complaints Text Embedding vector dimension reduction "
    ]
   },
   {
@@ -1085,7 +1095,7 @@
    "source": [
     "<br><br>\n",
     "\n",
-    "### Step 7: Build the AutoML classification model predicting monetary relief-response to consumers [12:300s]"
+    "### Step 7: Build the AutoML classification model predicting monetary relief-response to consumers"
    ]
   },
   {
