final (let's see) edits of ex1 and ex2

--- a/exercises/ex0/ex0_1_python_setup.ipynb
+++ b/exercises/ex0/ex0_1_python_setup.ipynb
@@ -92,11 +92,11 @@
    "source": [
     "### Prepare the SAP HANA Cloud connection credential file\n",
     "\n",
-    "The Python script further below, get used to connect this Python environment to the SAP HANA Cloud instance.  \n",
+    "The Python script further below, will get used to connect this Python environment to the SAP HANA Cloud instance.  \n",
     "The script\n",
     "- first imports database connection modules \n",
-    "- then initiates a connection using the connection details provided in a local file (user.ini)\n",
-    "- the script is reused for creating the connection from python to SAP HANA Cloud in each exercise\n",
+    "- then initiates a connection using the connection details extracted from a local file (user.ini)\n",
+    "- the script is reused for creating the connection from python to SAP HANA Cloud in the exercises 1 and 2\n",
     "- Alternatively, the user would be prompted to enter hostname, their username and password, which are then used to establish a secure connection to the SAP HANA Cloud database. \n",
     "\n",
     "</br>\n",
